welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: type COLOR
var T= new Array[COLOR](getMondeHauteur())
                 ^