welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}


getMondeHauteur()
var T= new Array[COLOR](getMondeHauteur())

